GERONIMO-6085 Remove java.lib.ext from the scripts for 3.0-beta, provided by Saphen Qiu
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/branches/3.0-beta@1335385 13f79535-47bb-0310-9956-ffa450edef68